--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "proxy":"https://mern-job-portal-rho.vercel.app/"
   "private": true,
   "version": "0.0.0",
   "type": "module",
